# manticore

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt  main.cpp
inc/process/: memory.h  process.h  registers.h  serialize.h
inc/process/proc/: proc.h
inc/process/ptrace/: ptrace.h  snapshot.h
inc/process/ptrace/i386/: snapshot.h
inc/utils/: casts.h  exceptions.h  range.h  string_utils.h  types.h
inc/utils/i386/: types.h
libs/: CMakeLists.txt  serialize.cpp  snapshot.proto
libs/inc/process/: registers.h
libs/inc/process/ptrace/: snapshot.h
libs/inc/process/ptrace/i386/: snapshot.h
libs/inc/utils/: casts.h  string_utils.h  typelists.h  types.h  typetraits.h
libs/inc/utils/i386/: types.h
libs/process/ptrace/i386/: snapshot.cpp
src/: CMakeLists.txt
src/core/: main.cpp
src/lib/: CMakeLists.txt  serialize.cpp  snapshot.pb.cc  snapshot.pb.h
src/lib/process/proc/: proc.cpp
src/lib/process/ptrace/: ptrace.cpp
src/lib/process/ptrace/i386/: snapshot.cpp
src/protobuf/: CMakeLists.txt  memory.proto  snapshot.proto
src/test/: CMakeLists.txt  casts.cpp  protobuf.cpp  registers.cpp  string_utils.cpp
test/: CMakeLists.txt  casts.cpp  registers.cpp  typetraits.cpp
