cmake_minimum_required(VERSION 2.8)
project(build)
find_package(Boost COMPONENTS unit_test_framework REQUIRED)
ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK)
include_directories(${Boost_INCLUDE_DIRS})
include_directories(${build_SOURCE_DIR}/libs/inc)
link_directories(${build_BUILD_DIR}/libs)
enable_testing()
add_subdirectory(core)
add_subdirectory(libs)
add_subdirectory(test)
