cmake_minimum_required(VERSION 2.8)
set(PROCESS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/process)
set(SERIALIZE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/serialize)
set(PTRACE_DIR "${PROCESS_DIR}/ptrace/${ARCH}")
set(PROC_DIR "${PROCESS_DIR}/proc/${ARCH}")

message(STATUS "PROCESS DIR: " ${PROCESS_DIR})
message(STATUS "SERIALIZE DIR: " ${SERIALIZE_DIR})
message(STATUS "PTRACE DIR: " ${PTRACE_DIR})
message(STATUS "PROC DIR: " ${PROC_DIR})

file(GLOB PTRACE_SRC ${PTRACE_DIR}/*.cpp)
file(GLOB PROC_SRC ${PROC_DIR}/*.cpp)
set(PROCESS_SRC ${PTRACE_SRC})

include_directories(${PROTOBUF_INCLUDE_DIRS})
include_directories(${CMAKE_CURRENT_BINARY_DIR})
PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HDRS snapshot.proto)

message(STATUS "GENERATED PROTO HEADERS: " ${PROTO_HDRS})
message(STATUS "GENERATED PROTO SOURCES: " ${PROTO_SRCS})

set(LIBMANTICORE_SRC ${PROCESS_SRC} ${PROTO_SRCS} ${PROTO_HDRS} serialize.cpp)
add_library(libmanticore STATIC ${LIBMANTICORE_SRC})
